# cosmic-themes-org-py

./: .dockerignore  .gitignore  Dockerfile  README.md  manage.py  package-lock.json  package.json  pyproject.toml
accounts/migrations/: 0001_initial.py
cosmic_themes/: api.py  asgi.py  settings.py  urls.py  wsgi.py
deploy/: deploy.sh
static/css/: main.css
static/js/: color-modes.js
templates/: base.html
themes/: admin.py  api.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
themes/migrations/: 0001_initial.py  0002_theme_blue_theme_green_theme_red.py
themes/templates/themes/: theme_colors.html  theme_detail.html  theme_form.html  theme_list.html  theme_list_partial.html  theme_partial.html
