[project]
name = "cosmic-themes-py"
version = "0.1.0"
description = "Website for https://cosmic-themes.org"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "dj-database-url>=2.2.0",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.1",
    "django-htmx>=1.19.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv]
dev-dependencies = ["django-stubs>=5.0.4"]

[tool.setuptools]
py-modules = []
